fixed hand z-indexing problems and other homepage issues
git-svn-id: http://svn.localprojects.net/gam2@1151 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/ie/tc.gam.ie7.css
+++ b/trunk/static/css/ie/tc.gam.ie7.css
@@ -29,8 +29,7 @@ ul.navbar li.search input[type=submit] { padding-left: 0; padding-right: 0;  }
 .continent.home .headlands .splash .step-three.projects-pane a.see-more { margin-bottom: 10px; }
 .continent.home div.info-input { padding-top: 15px; }
 .continent.home input#email { margin-left: -12px; }
-.continent.home .note-card-pane .primary-action .ca-btn.disabled { filter:none; }
-
+.continent.home div.info-input .row.row-3 { position: static; }
 
 /* project page */
 .continent.project .organizations-not-empty .add-organization { float: left; }
