--- a/trunk/static/css/ie/tc.gam.ie8.css
+++ b/trunk/static/css/ie/tc.gam.ie8.css
@@ -55,7 +55,7 @@ div.continent.home .headlands .splash .projects-pane h2 .text  { background: url
 PAGE-SPECIFIC STYLES */
 
 /* home page */
-div.continent.home .headlands .splash  .projects-pane h2 span.text { padding-top: 3px; padding-bottom: 2px; }
+.continent.home .note-card-pane .primary-action .ca-btn.disabled { filter:none; }
 
 
 /* search results page */
